--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "f60e5763",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from functions import split_features_target, fillna_mean_median, handle_outliers\n",
+    "from Cleaning_functions import split_features_target, fillna_mean_median, handle_outliers\n",
     "from taxipred.utils.constants import get_taxi_data\n",
     "df = get_taxi_data()"
    ]
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "1b1db0bf",
    "metadata": {},
    "outputs": [
@@ -123,22 +123,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   Trip_Distance_km  Passenger_Count  Base_Fare  Per_Km_Rate  Per_Minute_Rate  \\\n",
-       "0             19.35              3.0       3.56         0.80             0.32   \n",
-       "1             47.59              1.0        NaN         0.62             0.43   \n",
-       "2             36.87              1.0       2.70         1.21             0.15   \n",
-       "3             30.33              4.0       3.48         0.51             0.15   \n",
-       "4               NaN              3.0       2.93         0.63             0.32   \n",
+       "   Trip_Distance_km  Passenger_Count  ...  Per_Minute_Rate  Trip_Duration_Minutes\n",
+       "0             19.35              3.0  ...             0.32                  53.82\n",
+       "1             47.59              1.0  ...             0.43                  40.57\n",
+       "2             36.87              1.0  ...             0.15                  37.27\n",
+       "3             30.33              4.0  ...             0.15                 116.81\n",
+       "4               NaN              3.0  ...             0.32                  22.64\n",
        "\n",
-       "   Trip_Duration_Minutes  \n",
-       "0                  53.82  \n",
-       "1                  40.57  \n",
-       "2                  37.27  \n",
-       "3                 116.81  \n",
-       "4                  22.64  "
+       "[5 rows x 6 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "80a2438a",
    "metadata": {},
    "outputs": [],
@@ -176,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "dd3dbaa5",
    "metadata": {},
    "outputs": [
@@ -220,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "1cbff0b2",
    "metadata": {},
    "outputs": [],
@@ -238,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "6f971f36",
    "metadata": {},
    "outputs": [],
@@ -256,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "4b77c68a",
    "metadata": {},
    "outputs": [
@@ -301,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "02b4abd2",
    "metadata": {},
    "outputs": [
@@ -353,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "7ccd9469",
    "metadata": {},
    "outputs": [],
@@ -371,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "642bceb0",
    "metadata": {},
    "outputs": [
@@ -419,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "565da6dc",
    "metadata": {},
    "outputs": [],
@@ -452,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "9d50010b",
    "metadata": {},
    "outputs": [],
