--- a/explorations/model.ipynb
+++ b/explorations/model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bfe0abd6",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "4                     True         False         False     15.6180  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
     "import numpy as np\n",
     "from taxipred.utils.constants import get_clean_data\n",
     "from Cleaning_functions import split_features_target\n",
-    "from model_functions import train_evaluate\n",
+    "from model_functions import hyper_optimize, train_evaluate, tune_model\n",
     "\n",
     "df = get_clean_data()\n",
     "df.head()"
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "id": "34c506a7",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "id": "9abdab0d",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "4                  22.64  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "id": "1d2bd7e9",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "((800, 5), (200, 5))"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,22 +354,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a2eafa77",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# creating a dict for different estimators to evaluate\n",
-    "models = {\"linear\": {\"model\": LinearRegression(), \"scale\": True},\n",
-    "          \"knn\": {\"model\": KNeighborsRegressor(), \"scale\": True},\n",
-    "          \"svr\": {\"model\": SVR(), \"scale\": True},\n",
-    "          \"rnd\": {\"model\": RandomForestRegressor(), \"scale\": False},\n",
-    "          \"mlp\": {\"model\": MLPRegressor(), \"scale\": True},\n",
-    "          \"ridge\": {\"model\": Ridge(), \"scale\": True},\n",
-    "          \"lasso\":{\"model\": Lasso(), \"scale\": True},\n",
-    "          \"xgb\": {\"model\": XGBRegressor(), \"scale\": True}\n",
+    "models = {\n",
+    "    \"linear\": {\"model\": LinearRegression(), \"scale\": True},\n",
+    "  \"ridge\": {\"model\": Ridge(), \"scale\": True},\n",
+    "  \"lasso\":{\"model\": Lasso(), \"scale\": True},\n",
+    "    \"knn\": {\"model\": KNeighborsRegressor(), \"scale\": True},\n",
+    "    \"svr\": {\"model\": SVR(), \"scale\": True},\n",
+    "    \"mlp\": {\"model\": MLPRegressor(max_iter=5000, random_state=42), \"scale\": True},\n",
+    "    \"xgb\": {\"model\": XGBRegressor(random_state=42), \"scale\": True},\n",
+    "    \"rf\": {\"model\": RandomForestRegressor(random_state=42), \"scale\": False}\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7255d421",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results = hyper_optimize(X_train, y_train, models)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "403b7dfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Best R2</th>\n",
+       "      <th>Best Params</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>mlp</td>\n",
+       "      <td>0.891785</td>\n",
+       "      <td>{'model__activation': 'relu', 'model__hidden_l...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>xgb</td>\n",
+       "      <td>0.869875</td>\n",
+       "      <td>{'model__learning_rate': 0.05, 'model__max_dep...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>svr</td>\n",
+       "      <td>0.866089</td>\n",
+       "      <td>{'model__C': 10, 'model__kernel': 'rbf'}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>rf</td>\n",
+       "      <td>0.863280</td>\n",
+       "      <td>{'model__max_depth': 20, 'model__n_estimators'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ridge</td>\n",
+       "      <td>0.834864</td>\n",
+       "      <td>{'model__alpha': 1.0}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>lasso</td>\n",
+       "      <td>0.834859</td>\n",
+       "      <td>{'model__alpha': 0.01}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>linear</td>\n",
+       "      <td>0.834858</td>\n",
+       "      <td>{'model__fit_intercept': True}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>knn</td>\n",
+       "      <td>0.809608</td>\n",
+       "      <td>{'model__n_neighbors': 7}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Model   Best R2                                        Best Params\n",
+       "5     mlp  0.891785  {'model__activation': 'relu', 'model__hidden_l...\n",
+       "6     xgb  0.869875  {'model__learning_rate': 0.05, 'model__max_dep...\n",
+       "4     svr  0.866089           {'model__C': 10, 'model__kernel': 'rbf'}\n",
+       "7      rf  0.863280  {'model__max_depth': 20, 'model__n_estimators'...\n",
+       "1   ridge  0.834864                              {'model__alpha': 1.0}\n",
+       "2   lasso  0.834859                             {'model__alpha': 0.01}\n",
+       "0  linear  0.834858                     {'model__fit_intercept': True}\n",
+       "3     knn  0.809608                          {'model__n_neighbors': 7}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df_results.sort_values(by=\"Best R2\", ascending=False)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a3aed0ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "<class 'sklearn.neural_network._multilayer_perceptron.MLPRegressor'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m tuned_model = tune_model(df_results, models[\u001b[33m\"\u001b[39m\u001b[33mmlp\u001b[39m\u001b[33m\"\u001b[39m], \u001b[43mmodels\u001b[49m\u001b[43m[\u001b[49m\u001b[43mMLPRegressor\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# train/eval\u001b[39;00m\n\u001b[32m      4\u001b[39m model, metrics = train_evaluate(X_train, y_train, X_test, y_test, model=tuned_model)\n",
+      "\u001b[31mKeyError\u001b[39m: <class 'sklearn.neural_network._multilayer_perceptron.MLPRegressor'>"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "tuned_model = tune_model(df_results, models[\"mlp\"], models[MLPRegressor])\n",
+    "\n",
+    "# train/eval\n",
+    "model, metrics = train_evaluate(X_train, y_train, X_test, y_test, model=tuned_model)\n",
+    "\n",
+    "print(metrics)\n"
    ]
   },
   {
@@ -382,42 +529,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "dc8f0102",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Parameter grid for parameter 'memory' needs to be a list or a numpy array, but got None (of type NoneType) instead. Single values need to be wrapped in a list with one element.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[89]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m metric_results = []\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m model \u001b[38;5;129;01min\u001b[39;00m models:\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     model, metrics = \u001b[43mtrain_evaluate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m     metric_results.append({\n\u001b[32m      6\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mModel\u001b[39m\u001b[33m\"\u001b[39m: model,\n\u001b[32m      7\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mMAE\u001b[39m\u001b[33m\"\u001b[39m: metrics[\u001b[33m\"\u001b[39m\u001b[33mMAE\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m   (...)\u001b[39m\u001b[32m     10\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mR2\u001b[39m\u001b[33m\"\u001b[39m: metrics[\u001b[33m\"\u001b[39m\u001b[33mR2\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m     11\u001b[39m     })\n\u001b[32m     13\u001b[39m results_df = pd.DataFrame(metric_results).sort_values(by=\u001b[33m\"\u001b[39m\u001b[33mR2\u001b[39m\u001b[33m\"\u001b[39m, ascending=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[87]\u001b[39m\u001b[32m, line 32\u001b[39m, in \u001b[36mtrain_evaluate\u001b[39m\u001b[34m(X_train, y_train, X_test, y_test, model)\u001b[39m\n\u001b[32m     30\u001b[39m pipeline = Pipeline(steps)\n\u001b[32m     31\u001b[39m grid = GridSearchCV(pipeline, pipeline.get_params(), cv=\u001b[32m3\u001b[39m, scoring=\u001b[33m\"\u001b[39m\u001b[33mr2\u001b[39m\u001b[33m\"\u001b[39m, n_jobs=-\u001b[32m1\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m32\u001b[39m \u001b[43mgrid\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     34\u001b[39m score = grid.best_score_\n\u001b[32m     35\u001b[39m results.append({\n\u001b[32m     36\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mModel\u001b[39m\u001b[33m\"\u001b[39m: name,\n\u001b[32m     37\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mBest R2\u001b[39m\u001b[33m\"\u001b[39m: score,\n\u001b[32m     38\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mBest Params\u001b[39m\u001b[33m\"\u001b[39m: grid.best_params_\n\u001b[32m     39\u001b[39m })\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\metal\\Skola\\course\\taxi-prediction-fullstack-stefan-lundberg-opa24\\.venv\\Lib\\site-packages\\sklearn\\base.py:1365\u001b[39m, in \u001b[36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[39m\u001b[34m(estimator, *args, **kwargs)\u001b[39m\n\u001b[32m   1358\u001b[39m     estimator._validate_params()\n\u001b[32m   1360\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[32m   1361\u001b[39m     skip_parameter_validation=(\n\u001b[32m   1362\u001b[39m         prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[32m   1363\u001b[39m     )\n\u001b[32m   1364\u001b[39m ):\n\u001b[32m-> \u001b[39m\u001b[32m1365\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfit_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43mestimator\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\metal\\Skola\\course\\taxi-prediction-fullstack-stefan-lundberg-opa24\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1051\u001b[39m, in \u001b[36mBaseSearchCV.fit\u001b[39m\u001b[34m(self, X, y, **params)\u001b[39m\n\u001b[32m   1045\u001b[39m     results = \u001b[38;5;28mself\u001b[39m._format_results(\n\u001b[32m   1046\u001b[39m         all_candidate_params, n_splits, all_out, all_more_results\n\u001b[32m   1047\u001b[39m     )\n\u001b[32m   1049\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n\u001b[32m-> \u001b[39m\u001b[32m1051\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_run_search\u001b[49m\u001b[43m(\u001b[49m\u001b[43mevaluate_candidates\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1053\u001b[39m \u001b[38;5;66;03m# multimetric is determined here because in the case of a callable\u001b[39;00m\n\u001b[32m   1054\u001b[39m \u001b[38;5;66;03m# self.scoring the return type is only known after calling\u001b[39;00m\n\u001b[32m   1055\u001b[39m first_test_score = all_out[\u001b[32m0\u001b[39m][\u001b[33m\"\u001b[39m\u001b[33mtest_scores\u001b[39m\u001b[33m\"\u001b[39m]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\metal\\Skola\\course\\taxi-prediction-fullstack-stefan-lundberg-opa24\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1605\u001b[39m, in \u001b[36mGridSearchCV._run_search\u001b[39m\u001b[34m(self, evaluate_candidates)\u001b[39m\n\u001b[32m   1603\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_run_search\u001b[39m(\u001b[38;5;28mself\u001b[39m, evaluate_candidates):\n\u001b[32m   1604\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Search all candidates in param_grid\"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1605\u001b[39m     evaluate_candidates(\u001b[43mParameterGrid\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mparam_grid\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\metal\\Skola\\course\\taxi-prediction-fullstack-stefan-lundberg-opa24\\.venv\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:129\u001b[39m, in \u001b[36mParameterGrid.__init__\u001b[39m\u001b[34m(self, param_grid)\u001b[39m\n\u001b[32m    122\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    123\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mParameter array for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m should be one-dimensional, got:\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    124\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m with shape \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue.shape\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    125\u001b[39m     )\n\u001b[32m    126\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value, \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\n\u001b[32m    127\u001b[39m     value, (np.ndarray, Sequence)\n\u001b[32m    128\u001b[39m ):\n\u001b[32m--> \u001b[39m\u001b[32m129\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[32m    130\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mParameter grid for parameter \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m needs to be a list or a\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    131\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m numpy array, but got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m (of type \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    132\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(value).\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m) instead. Single values \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    133\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mneed to be wrapped in a list with one element.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    134\u001b[39m     )\n\u001b[32m    135\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(value) == \u001b[32m0\u001b[39m:\n\u001b[32m    136\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    137\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mParameter grid for parameter \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m need \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    138\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mto be a non-empty sequence, got: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    139\u001b[39m     )\n",
-      "\u001b[31mTypeError\u001b[39m: Parameter grid for parameter 'memory' needs to be a list or a numpy array, but got None (of type NoneType) instead. Single values need to be wrapped in a list with one element."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "metric_results = []\n",
+    "# metric_results = []\n",
     "\n",
-    "for model in models:\n",
-    "    model, metrics = train_evaluate(X_train, y_train, X_test, y_test, models)\n",
-    "    metric_results.append({\n",
-    "        \"Model\": model,\n",
-    "        \"MAE\": metrics[\"MAE\"],\n",
-    "        \"MSE\": metrics[\"MSE\"],\n",
-    "        \"RMSE\": metrics[\"RMSE\"],\n",
-    "        \"R2\": metrics[\"R2\"]\n",
-    "    })\n",
+    "# for model in models:\n",
+    "#     model, metrics = train_evaluate(X_train, y_train, X_test, y_test, models)\n",
+    "#     metric_results.append({\n",
+    "#         \"Model\": model,\n",
+    "#         \"MAE\": metrics[\"MAE\"],\n",
+    "#         \"MSE\": metrics[\"MSE\"],\n",
+    "#         \"RMSE\": metrics[\"RMSE\"],\n",
+    "#         \"R2\": metrics[\"R2\"]\n",
+    "#     })\n",
     "\n",
-    "results_df = pd.DataFrame(metric_results).sort_values(by=\"R2\", ascending=False)\n",
-    "print(results_df)"
+    "# results_df = pd.DataFrame(metric_results).sort_values(by=\"R2\", ascending=False)\n",
+    "# print(results_df)"
    ]
   },
   {
@@ -430,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0aab9f33",
    "metadata": {},
    "outputs": [],
