--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -123,14 +123,19 @@
        "</div>"
       ],
       "text/plain": [
-       "   Trip_Distance_km  Passenger_Count  ...  Per_Minute_Rate  Trip_Duration_Minutes\n",
-       "0             19.35              3.0  ...             0.32                  53.82\n",
-       "1             47.59              1.0  ...             0.43                  40.57\n",
-       "2             36.87              1.0  ...             0.15                  37.27\n",
-       "3             30.33              4.0  ...             0.15                 116.81\n",
-       "4               NaN              3.0  ...             0.32                  22.64\n",
+       "   Trip_Distance_km  Passenger_Count  Base_Fare  Per_Km_Rate  Per_Minute_Rate  \\\n",
+       "0             19.35              3.0       3.56         0.80             0.32   \n",
+       "1             47.59              1.0        NaN         0.62             0.43   \n",
+       "2             36.87              1.0       2.70         1.21             0.15   \n",
+       "3             30.33              4.0       3.48         0.51             0.15   \n",
+       "4               NaN              3.0       2.93         0.63             0.32   \n",
        "\n",
-       "[5 rows x 6 columns]"
+       "   Trip_Duration_Minutes  \n",
+       "0                  53.82  \n",
+       "1                  40.57  \n",
+       "2                  37.27  \n",
+       "3                 116.81  \n",
+       "4                  22.64  "
       ]
      },
      "execution_count": 2,
@@ -460,7 +465,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "taxi-prediction-fullstack-stefan-lundberg-opa24 (3.13.7)",
+   "display_name": "taxi-prediction-fullstack-stefan-lundberg-opa24-1",
    "language": "python",
    "name": "python3"
   },
@@ -474,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
