--- a/explorations/eda.ipynb
+++ b/explorations/eda.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d1e683a2",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "4                  22.64     15.6180  "
       ]
      },
-     "execution_count": 1843,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1844,
+   "execution_count": 2,
    "id": "ad4817d7",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1845,
+   "execution_count": 3,
    "id": "6aab3c59",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "(1000, 11)"
       ]
      },
-     "execution_count": 1845,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1846,
+   "execution_count": 4,
    "id": "a2d740b4",
    "metadata": {},
    "outputs": [
@@ -489,7 +489,7 @@
        "max                119.840000  332.043689  "
       ]
      },
-     "execution_count": 1846,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1847,
+   "execution_count": 5,
    "id": "3bfc02f9",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 1847,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1848,
+   "execution_count": 6,
    "id": "8efe00df",
    "metadata": {},
    "outputs": [],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1849,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1850,
+   "execution_count": 8,
    "id": "9b5a6b60",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1852,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1853,
+   "execution_count": 11,
    "id": "da3e668e",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 1853,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -791,7 +791,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "taxi-prediction-fullstack-stefan-lundberg-opa24 (3.13.7)",
+   "display_name": "taxi-prediction-fullstack-stefan-lundberg-opa24-1",
    "language": "python",
    "name": "python3"
   },
@@ -805,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
