--- a/explorations/model.ipynb
+++ b/explorations/model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "id": "bfe0abd6",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "4                     True         False         False     15.6180  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "id": "34c506a7",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "id": "9abdab0d",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "4                  22.64  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "id": "1d2bd7e9",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "((800, 5), (200, 5))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "id": "a2eafa77",
    "metadata": {},
    "outputs": [],
@@ -362,20 +362,20 @@
     "\n",
     "# creating a dict for different estimators to evaluate\n",
     "models = {\n",
-    "    \"linear\": {\"model\": LinearRegression(), \"scale\": True},\n",
-    "  \"ridge\": {\"model\": Ridge(), \"scale\": True},\n",
-    "  \"lasso\":{\"model\": Lasso(), \"scale\": True},\n",
-    "    \"knn\": {\"model\": KNeighborsRegressor(), \"scale\": True},\n",
-    "    \"svr\": {\"model\": SVR(), \"scale\": True},\n",
-    "    \"mlp\": {\"model\": MLPRegressor(max_iter=5000, random_state=42), \"scale\": True},\n",
-    "    \"xgb\": {\"model\": XGBRegressor(random_state=42), \"scale\": True},\n",
-    "    \"rf\": {\"model\": RandomForestRegressor(random_state=42), \"scale\": False}\n",
+    "  #\"linear\": {\"model\": LinearRegression(), \"scale\": True},\n",
+    "  #\"ridge\": {\"model\": Ridge(), \"scale\": True},\n",
+    "  #\"lasso\":{\"model\": Lasso(), \"scale\": True},\n",
+    "  #\"knn\": {\"model\": KNeighborsRegressor(), \"scale\": True},\n",
+    "  #\"svr\": {\"model\": SVR(), \"scale\": True},\n",
+    "  #\"mlp\": {\"model\": MLPRegressor(max_iter=200, random_state=42), \"scale\": True},\n",
+    "  \"xgb\": {\"model\": XGBRegressor(random_state=42), \"scale\": True},\n",
+    "  #\"rf\": {\"model\": RandomForestRegressor(random_state=42), \"scale\": False}\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "id": "7255d421",
    "metadata": {},
    "outputs": [],
@@ -385,8 +385,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 76,
    "id": "403b7dfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df_results = df_results.sort_values(by=\"Best R2\", ascending=False)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "5b61eb08",
    "metadata": {},
    "outputs": [
     {
@@ -417,106 +429,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>mlp</td>\n",
-       "      <td>0.891785</td>\n",
-       "      <td>{'model__activation': 'relu', 'model__hidden_l...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>0</th>\n",
        "      <td>xgb</td>\n",
        "      <td>0.869875</td>\n",
        "      <td>{'model__learning_rate': 0.05, 'model__max_dep...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>svr</td>\n",
-       "      <td>0.866089</td>\n",
-       "      <td>{'model__C': 10, 'model__kernel': 'rbf'}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>rf</td>\n",
-       "      <td>0.863280</td>\n",
-       "      <td>{'model__max_depth': 20, 'model__n_estimators'...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ridge</td>\n",
-       "      <td>0.834864</td>\n",
-       "      <td>{'model__alpha': 1.0}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>lasso</td>\n",
-       "      <td>0.834859</td>\n",
-       "      <td>{'model__alpha': 0.01}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>linear</td>\n",
-       "      <td>0.834858</td>\n",
-       "      <td>{'model__fit_intercept': True}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>knn</td>\n",
-       "      <td>0.809608</td>\n",
-       "      <td>{'model__n_neighbors': 7}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Model   Best R2                                        Best Params\n",
-       "5     mlp  0.891785  {'model__activation': 'relu', 'model__hidden_l...\n",
-       "6     xgb  0.869875  {'model__learning_rate': 0.05, 'model__max_dep...\n",
-       "4     svr  0.866089           {'model__C': 10, 'model__kernel': 'rbf'}\n",
-       "7      rf  0.863280  {'model__max_depth': 20, 'model__n_estimators'...\n",
-       "1   ridge  0.834864                              {'model__alpha': 1.0}\n",
-       "2   lasso  0.834859                             {'model__alpha': 0.01}\n",
-       "0  linear  0.834858                     {'model__fit_intercept': True}\n",
-       "3     knn  0.809608                          {'model__n_neighbors': 7}"
+       "  Model   Best R2                                        Best Params\n",
+       "0   xgb  0.869875  {'model__learning_rate': 0.05, 'model__max_dep..."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "df_results.sort_values(by=\"Best R2\", ascending=False)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3aed0ad",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "<class 'sklearn.neural_network._multilayer_perceptron.MLPRegressor'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m tuned_model = tune_model(df_results, models[\u001b[33m\"\u001b[39m\u001b[33mmlp\u001b[39m\u001b[33m\"\u001b[39m], \u001b[43mmodels\u001b[49m\u001b[43m[\u001b[49m\u001b[43mMLPRegressor\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# train/eval\u001b[39;00m\n\u001b[32m      4\u001b[39m model, metrics = train_evaluate(X_train, y_train, X_test, y_test, model=tuned_model)\n",
-      "\u001b[31mKeyError\u001b[39m: <class 'sklearn.neural_network._multilayer_perceptron.MLPRegressor'>"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "tuned_model = tune_model(df_results, models[MLPRegressor])\n",
-    "\n",
-    "# train/eval\n",
-    "model, metrics = train_evaluate(X_train, y_train, X_test, y_test, model=tuned_model)\n",
-    "\n",
-    "print(metrics)\n"
+    "df_results"
    ]
   },
   {
@@ -529,25 +462,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "dc8f0102",
+   "execution_count": 78,
+   "id": "a3aed0ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'MAE': 4.97, 'MSE': 54.85, 'RMSE': np.float64(7.41), 'R2': 0.91}\n"
+     ]
+    }
+   ],
    "source": [
-    "# metric_results = []\n",
     "\n",
-    "# for model in models:\n",
-    "#     model, metrics = train_evaluate(X_train, y_train, X_test, y_test, models)\n",
-    "#     metric_results.append({\n",
-    "#         \"Model\": model,\n",
-    "#         \"MAE\": metrics[\"MAE\"],\n",
-    "#         \"MSE\": metrics[\"MSE\"],\n",
-    "#         \"RMSE\": metrics[\"RMSE\"],\n",
-    "#         \"R2\": metrics[\"R2\"]\n",
-    "#     })\n",
+    "tuned_model = tune_model(df_results, \"xgb\", models)\n",
     "\n",
-    "# results_df = pd.DataFrame(metric_results).sort_values(by=\"R2\", ascending=False)\n",
-    "# print(results_df)"
+    "# train/eval\n",
+    "model, metrics = train_evaluate(X_train, y_train, X_test, y_test, tuned_model)\n",
+    "\n",
+    "print(metrics)\n"
    ]
   },
   {
@@ -560,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 80,
    "id": "0aab9f33",
    "metadata": {},
    "outputs": [],
